# src/routes/escolaRoute.js
@@ -5,13 +5,31 @@ const router = express.Router();
 const provinciaRoute = require('./provinciaRoute');
 const Escola = require('../models/escolaModel')
 const Provincia = require('../models/provinciaModel');
-const { isEmpty } = require('lodash');
+//Manipulação do Excel
+const _ = require('lodash');
+const fs = require('fs');
+const xslx = require('node-xlsx');
+
 const { json } = require('body-parser');
+
+//Upload
+const multer = require('multer');
+const path = require('path');
+const { log } = require('console');
+const storage = multer.diskStorage({
+    destination: (req, file, cb) => {
+        cb(null, path.join(__dirname, '/uploads/'));
+    },
+    filename: (req, file, cb) => {
+        cb(null, Date.now() + '-' + file.originalname);
+    }
+});
+const upload = multer({ storage: storage });
 
 //Pegar o id da província
 async function idProvincia(nomeProvincia) {
     try {
-        const object = await Provincia.find({ nome: nomeProvincia});
+        const object = await Provincia.find({ nome: nomeProvincia });
         return object[0]._id;
     } catch (error) {
         return error;
@@ -20,7 +38,7 @@ async function idProvincia(nomeProvincia) {
 //Pegar o nome da província
 async function nomeProvincia(idProvincia) {
     try {
-        const object = await Provincia.find({ _id: idProvincia});
+        const object = await Provincia.find({ _id: idProvincia });
         return object[0].nome;
     } catch (error) {
         return error;
@@ -47,9 +65,9 @@ router.get('/escola', async (req, res) => {
     try {
         const escolas = await Escola.find();
         const escola = await mostrarEscola(escolas);
-         
-        if (isEmpty(escola)) {
-            res.status(400).json({ info: "Nenhuma escola Listada" });    
+
+        if (_.isEmpty(escola)) {
+            res.status(400).json({ info: "Nenhuma escola Listada" });
         } else {
             res.status(200).json(escola);
         }
@@ -61,10 +79,10 @@ router.get('/escola', async (req, res) => {
 
 //Cadastrar Escolas
 router.post('/escola', async (req, res) => {
-    
+
     const id = await idProvincia(req.body.provincia);
 
-    if (isEmpty(id)) {
+    if (_.isEmpty(id)) {
         res.status(400).json({ message: "Por favor digite a Província da forma certa" });
     } else {
         const escola = new Escola({
@@ -82,14 +100,60 @@ router.post('/escola', async (req, res) => {
     }
 });
 
+//Cadastrar Escolas Dinamicamente
+router.post('/escola/excel', upload.single('file'), async (req, res) => {
+    const pathFind = path.join(__dirname, '/uploads/');
+
+    if (!req.file && (!fs.existsSync(pathFind.includes('.xslx')) || !fs.existsSync(pathFind.includes('.xsl')))) {
+        return res.status(400).json({
+            info: 'Nenhum EXCEL carregado'
+        });
+    } else {
+        const workbook = xslx.parse(req.file.path);
+        
+        let filtro = [];
+        let escolas = [];
+        if (_.isEqual("Nome,Email,Número de Salas,Província", workbook[0].data[0].toString())) {
+            
+            _.forEach(workbook[0].data, (v, k) => {
+                filtro[k] = v;
+            });
+            
+            for (let i = 1; i < filtro.length; i++) {
+                const id = await idProvincia(filtro[i][3]);
+                if (_.isEmpty(id)) {
+                    res.status(401).json({ message: filtro[i] + "-" + "Por favor digite a Província da forma certa" });
+                    continue;
+                } else {
+                    escolas[i] = new Escola ({
+                        nome: filtro[i][0],
+                        email: filtro[i][1],
+                        numSalas: filtro[i][2],
+                        provincia_id: id
+                    });
+                }
+            }
+        } else {
+            res.status(400).json({ info: "Copie e cole esse cabaçalho ao seu Excel para cada campo. Nome, Email, Número de Salas, Província" });
+        }
+
+        const cadastroDinamicoEscolas = [];
+        for (let i = 1; i < filtro.length; i++) {
+            cadastroDinamicoEscolas[i] = await escolas[i].save();
+        }   
+        
+        res.status(200).json(cadastroDinamicoEscolas);
+    }
+});
+
 //Consultar apenas uma escola específica
 router.get('/escola/:id', async (req, res) => {
     try {
-        const escolas = await Escola.find({ _id: req.params.id});
+        const escolas = await Escola.find({ _id: req.params.id });
         const escola = await mostrarEscola(escolas);
-         
-        if (isEmpty(escola)) {
-            res.status(400).json({ info: "Nenhuma escola Listada." });    
+
+        if (_.isEmpty(escola)) {
+            res.status(400).json({ info: "Nenhuma escola Listada." });
         } else {
             res.status(200).json(escola);
         }
@@ -101,14 +165,14 @@ router.get('/escola/:id', async (req, res) => {
 
 //Actualizar Escola
 router.patch('/escola/:id', async (req, res) => {
-    const escola = await Escola.find({ _id: req.params.id});
+    const escola = await Escola.find({ _id: req.params.id });
 
-    if (isEmpty(req.body.nome && req.body.email && req.body.numSalas && req.body.provincia)) {
+    if (_.isEmpty(req.body.nome && req.body.email && req.body.numSalas && req.body.provincia)) {
         res.status(400).json({ message: "Preencha os campos nome, email, número de salas e província da escola" });
     } else {
         const id = await idProvincia(req.body.provincia);
 
-        if(isEmpty(id)) {
+        if (_.isEmpty(id)) {
             res.status(401).json({ message: "Por favor digite a Província da forma certa" });
         } else {
             escola[0].nome = req.body.nome;
@@ -129,12 +193,12 @@ router.patch('/escola/:id', async (req, res) => {
 //Deletar Escola
 router.delete('/escola/:id', async (req, res) => {
     try {
-        await Escola.findByIdAndDelete({ _id: req.params.id}).then(escola => {
-           if (isEmpty(escola)) {
+        await Escola.findByIdAndDelete({ _id: req.params.id }).then(escola => {
+            if (_.isEmpty(escola)) {
                 res.status(404).json({ message: "Escola não encontrada" });
-           } else {
+            } else {
                 res.status(200).json({ message: "Escola deletada" });
-           } 
+            }
         });
     } catch (error) {
         res.status(500).json({ message: error });
