# src/routes/provinciaRoute.js
@@ -22,24 +22,6 @@ const storage = multer.diskStorage({
 });
 const upload = multer({ storage: storage });
 
-// Recursive function to get files
-function getFiles(dir, files = []) {
-    // Get an array of all files and directories in the passed directory using fs.readdirSync
-    const fileList = fs.readdirSync(dir)
-    // Create the full path of the file/directory by concatenating the passed directory and file/directory name
-    for (const file of fileList) {
-        const name = `${dir}/${file}`
-        // Check if the current file/directory is a directory using fs.statSync
-        if (fs.statSync(name).isDirectory()) {
-            // If it is a directory, recursively call the getFiles function with the directory path and the files array
-            getFiles(name, files)
-        } else {
-            // If it is a file, push the full path to the files array
-            files.push(name)
-        }
-    }
-    return files
-}
 // Função para criar Província
 async function createProvince(jsonUploadPath) {
     const province = require(jsonUploadPath);
